--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "@google/genai": "^1.19.0",
-    "axios": "^1.6.8",
+    "@google/generative-ai": "^0.24.1",
+    "axios": "^1.6.8",  
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "mongoose": "^8.3.1"
   }
